minor radar fixes

--- a/src/styles.css
+++ b/src/styles.css
@@ -611,6 +611,7 @@ p {
 .matches-list {
     display: flex;
     flex-direction: column;
+    align-items: center;
     gap: 15px;
     width: 100%;
 }
