--- a/src/styles/components/cards.css
+++ b/src/styles/components/cards.css
@@ -70,7 +70,9 @@
         padding: 25px 30px;
         min-width: 600px
     }
-}/*****************************************/
+}
+
+/*****************************************/
 /* MATCH CARDS */
 /* ***************************************/
 
