--- a/src/styles/layout/containers.css
+++ b/src/styles/layout/containers.css
@@ -38,7 +38,7 @@
 .section-container {
     /* Mobile: full width disponibile */
     width: 100%;
-    margin: 0 auto;
+    margin: 0 auto 60px auto;
 }
 
 .section-header {
